--- a/ngrinder-controller/pom.xml
+++ b/ngrinder-controller/pom.xml
@@ -15,6 +15,7 @@
 		<deploy.dir>${basedir}/../../deploy</deploy.dir>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
+		<jackson.version>2.4.4</jackson.version>
 	</properties>
 
 	<profiles>
@@ -121,7 +122,7 @@
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
-			<version>2.3.20</version>
+			<version>2.3.23</version>
 		</dependency>
 
 		<dependency>
@@ -433,6 +434,13 @@
 			<artifactId>lucy-xss-servlet</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
